--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="card">
             <article class="card__resto">
                 <a href="">
-                    <img class="card__img" src="" alt="">
+                    <img class="card__img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                     <div class="card__text">
                         <h3 class="card__name">La palette du goût</h3>
                         <span class="card__location">Ménilmontant</span>
@@ -58,7 +58,7 @@
         <ul class="footer__list">
             <li class="footer__list-item footer__list-item-main"><i class="footer__icon"></i><a href="#">Proposer un restaurant</a></li>
             <li class="footer__list-item footer__list-item-main"><i class="footer__icon"></i><a href="#">Devenir partenaire</a></li>
-            <li class="footer__list-item"></li><a href="#">Mentions légales</a></li>
+            <li class="footer__list-item"><a href="#">Mentions légales</a></li>
             <li class="footer__list-item"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
