menu-page + animations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <div id="loader" class="loader">
         <div class="loader__container">
             <div class="loader__animation">
-                <img src="public/img/loader.gif" alt="loader">
+                    <span>o</span>
+                    <span>h</span>
+                    <span>m</span>
+                    <span>y</span>
+                    <span>f</span>
+                    <span>o</span>
+                    <span>o</span>
+                    <span>d</span>
             </div>
         </div>
     </div>
@@ -63,9 +70,12 @@
                         <div class="card__text">
                             <h3 class="card__name">La palette du goût</h3>
                             <span class="card__location">Ménilmontant</span>
-                            <i class="fa-thin fa-heart card__heart card__heart--active"></i>
                         </div>
                     </a>
+                    <div class="heart">
+                        <i class="fa-light fa-heart heart-icon heart__base"></i>
+                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                    </div>
                 </article>
                 <article class="card__resto card__new">
                     <a href="menu2.html">
@@ -73,9 +83,12 @@
                         <div class="card__text">
                             <h3 class="card__name">La note enchantée</h3>
                             <span class="card__location">Charonne</span>
-                            <i class="fa-thin fa-heart card__heart card__heart--active"></i>
                         </div>
-                    </a>
+                    </a>                            
+                    <div class="heart">
+                        <i class="fa-light fa-heart heart-icon heart__base"></i>
+                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                    </div>
                 </article>
                 <article class="card__resto">
                     <a href="menu3.html">
@@ -83,9 +96,12 @@
                         <div class="card__text">
                             <h3 class="card__name">À la française</h3>
                             <span class="card__location">Cité Rouge</span>
-                            <i class="fa-thin fa-heart card__heart card__heart--active"></i>
                         </div>
                     </a>
+                    <div class="heart">
+                        <i class="fa-light fa-heart heart-icon heart__base"></i>
+                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                    </div>
                 </article>
                 <article class="card__resto">
                     <a href="menu4.html">
@@ -93,9 +109,13 @@
                         <div class="card__text">
                             <h3 class="card__name">Le délice des sens</h3>
                             <span class="card__location">Folie-Méricourt</span>
-                            <i class="fa-thin fa-heart card__heart card__heart--active"></i>
+                            
                         </div>
                     </a>
+                    <div class="heart">
+                        <i class="fa-light fa-heart heart-icon heart__base"></i>
+                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                    </div>
                 </article>
             </div>
         </section>
