--- a/menu1.html
+++ b/menu1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +22,117 @@
             <img class="menu-img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"> 
         </div>
         <section class="menu">
-            <h2 class="menu__title">La palette du goût</h2>
-            <article class="menu__group">
-                
+            <div class="menu__title-bloc">
+                <h1 class="menu__title">La palette du goût</h1>
+                <div class="heart" href="#">
+                    <i class="fa-light fa-heart heart-icon heart__base"></i>
+                    <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                </div>
+            </div>
+            <article class="menu__cards menu-card">
+                <h2 class="menu-card__title">Entrées</h2>
+                <ul>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Fricassée d'escargot</h3>
+                            <span class="menu-card__description">Au piment d'espelette</span>
+                        </div>
+                        <div class="menu-card__price"><span>25€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Foie gras de canard mi-cuit</h3>
+                            <span class="menu-card__description">Et ses copeaux de truffe noire</span>
+                        </div>
+                        <div class="menu-card__price"><span>35€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Oeuf au plat</h3>
+                            <span class="menu-card__description">Assaisonné à la truffe sur lit de caviar</span>
+                        </div>
+                        <div class="menu-card__price"><span>20€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                </ul>
+            </article>
+            <article class="menu__cards menu-card">
+                <h2 class="menu-card__title">Plats</h2>
+                <ul>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Filet de boeuf aux herbes</h3>
+                            <span class="menu-card__description">Accompagné de sa ribambelle de légumes</span>
+                        </div>
+                        <div class="menu-card__price"><span>40€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Parmentier de queue de boeuf</h3>
+                            <span class="menu-card__description">À la truffe noire sur sa purée de panais</span>
+                        </div>
+                        <div class="menu-card__price"><span>35€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Filet de turbot</h3>
+                            <span class="menu-card__description">Aux agrumes</span>
+                        </div>
+                        <div class="menu-card__price"><span>44€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                </ul>
+            </article>
+            <article class="menu__cards menu-card">
+                <h2 class="menu-card__title">Desserts</h2>
+                <ul>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Paris-Brest</h3>
+                            <span class="menu-card__description">Revisité</span>
+                        </div>
+                        <div class="menu-card__price"><span>18€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Macaron au chocolat d'exception</h3>
+                            <span class="menu-card__description">Et glace à la vanille de Madagascar</span>
+                        </div>
+                        <div class="menu-card__price"><span>22€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                    <li class="menu-card__item">
+                        <div class="menu-card__text">
+                            <h3 class="menu-card__name">Mousse au chocolat</h3>
+                            <span class="menu-card__description">Au piment d'Espelette et à la truffe noire</span>
+                        </div>
+                        <div class="menu-card__price"><span>23€</span></div>
+                        <div class="menu-card__check">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </li>
+                </ul>
             </article>
             <button class="btn-cta menu__btn">Commander</button>
         </section>
