update before master correction

--- a/menu1.html
+++ b/menu1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-            <div class="return">
+            <div class="return" href="index.html">
                 <i class="fa-solid fa-arrow-left"></i>
             </div>
             <div class="logo">
