--- a/menu1.html
+++ b/menu1.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="../public/css/main.css">
 </head>
 <body>
     <header>
-            <div class="return" href="index.html">
-                <i class="fa-solid fa-arrow-left"></i>
+            <div class="return">
+                <a  href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
             </div>
             <div class="logo">
                 <a class="logo__link" href="index.html">
