--- a/menu1.html
+++ b/menu1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="../public/css/main.css">
+    <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
     <header>
