code cleaning & optimisation

--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -3,35 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ohmyfood</title>
-    <link rel="stylesheet" href="public/css/main.css">
+    <title>ohmyfood - La palette du goût</title>
+    <link rel="icon" href="../../public/img/favicon.ico">
+    <link rel="stylesheet" href="../../public/css/main.css">
 </head>
 <body>
+    <!-- header -->
     <header>
+            <!-- return button -->
             <div class="return">
-                <a  href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+                <a  href="../../index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
+            <!-- logo -->
             <div class="logo">
-                <a class="logo__link" href="index.html">
-                    <img class="logo__img" src="public/img/logo/ohmyfood@2x.svg" alt="ohmyfood">
+                <a class="logo__link" href="../../index.html">
+                    <img class="logo__img" src="../../public/img/logo/ohmyfood@2x.svg" alt="ohmyfood">
                 </a>
             </div>
     </header>
     <main>
+        <!-- banner image -->
         <div class="image">
-            <img class="menu-img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"> 
+            <img class="menu-img" src="../../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"> 
         </div>
+        <!-- menu section -->
         <section class="menu">
+            <!-- restaurant name -->
             <div class="menu__title-bloc">
                 <h1 class="menu__title">La palette du goût</h1>
                 <div class="heart" href="#">
-                    <i class="fa-light fa-heart heart-icon heart__base"></i>
-                    <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                    <i class="fal fa-heart heart-icon heart__base"></i>
+                    <i class="fas fa-heart heart-icon heart__hover"></i>
                 </div>
             </div>
+            <!-- menu lists -->
             <article class="menu__cards menu-card">
                 <h2 class="menu-card__title">Entrées</h2>
-                <ul>
+                <ul class="menu-card__list">
                     <li class="menu-card__item">
                         <div class="menu-card__text">
                             <h3 class="menu-card__name">Fricassée d'escargot</h3>
@@ -39,7 +47,7 @@
                         </div>
                         <div class="menu-card__price"><span>25€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                     <li class="menu-card__item">
@@ -49,7 +57,7 @@
                         </div>
                         <div class="menu-card__price"><span>35€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                     <li class="menu-card__item">
@@ -59,14 +67,14 @@
                         </div>
                         <div class="menu-card__price"><span>20€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                 </ul>
             </article>
             <article class="menu__cards menu-card">
                 <h2 class="menu-card__title">Plats</h2>
-                <ul>
+                <ul class="menu-card__list">
                     <li class="menu-card__item">
                         <div class="menu-card__text">
                             <h3 class="menu-card__name">Filet de boeuf aux herbes</h3>
@@ -74,7 +82,7 @@
                         </div>
                         <div class="menu-card__price"><span>40€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                     <li class="menu-card__item">
@@ -84,7 +92,7 @@
                         </div>
                         <div class="menu-card__price"><span>35€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                     <li class="menu-card__item">
@@ -94,14 +102,14 @@
                         </div>
                         <div class="menu-card__price"><span>44€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                 </ul>
             </article>
             <article class="menu__cards menu-card">
                 <h2 class="menu-card__title">Desserts</h2>
-                <ul>
+                <ul class="menu-card__list">
                     <li class="menu-card__item">
                         <div class="menu-card__text">
                             <h3 class="menu-card__name">Paris-Brest</h3>
@@ -109,7 +117,7 @@
                         </div>
                         <div class="menu-card__price"><span>18€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                     <li class="menu-card__item">
@@ -119,7 +127,7 @@
                         </div>
                         <div class="menu-card__price"><span>22€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                     <li class="menu-card__item">
@@ -129,19 +137,21 @@
                         </div>
                         <div class="menu-card__price"><span>23€</span></div>
                         <div class="menu-card__check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </li>
                 </ul>
             </article>
+            <!-- order button -->
             <button class="btn-cta menu__btn">Commander</button>
         </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
         <h2 class="footer__title">ohmyfood</h2>
         <ul class="footer__list">
-            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
-            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fa-solid fa-handshake-angle footer__icon"></i>Devenir partenaire</a></li>
+            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
+            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fas fa-hands-helping footer__icon"></i>Devenir partenaire</a></li>
             <li class="footer__list-item"><a class="footer__link" href="#">Mentions légales</a></li>
             <li class="footer__list-item"><a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
