--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
+    <link rel="icon" href="public/img/favicon.ico">
     <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
+    <!-- loader -->
     <div id="loader" class="loader">
         <div class="loader__container">
             <div class="loader__animation">
@@ -21,8 +23,10 @@
             </div>
         </div>
     </div>
+    <!-- header -->
     <header>
         <nav>
+            <!-- logo -->
             <div class="logo">
                 <a class="logo__link" href="index.html">
                     <img class="logo__img" src="public/img/logo/ohmyfood@2x.svg" alt="ohmyfood">
@@ -31,9 +35,10 @@
         </nav>
     </header>
     <main>
+        <!-- location section -->
         <section class="location">
             <div class="location__city">
-                <span><i class="fa-solid fa-location-dot"></i>Paris, Belleville</span>
+                <span><i class="fas fa-map-marker-alt"></i>Paris, Belleville</span>
             </div>
             <div class="location__text">
                 <h2 class="location__title">Réservez le menu qui vous convient</h2>
@@ -41,31 +46,34 @@
                 <button class="btn-cta location__btn">Explorer nos restaurants</button>
             </div>
         </section>
+        <!-- notice section -->
         <section class="notice">
             <h2 class="notice__title">Fonctionnement</h2>
             <ul class="notice__list">
                 <li class="notice__item">
                     <span class="notice__no">1</span>
-                    <i class="fa-solid fa-mobile-screen-button notice__icon"></i>
+                    <i class="fas fa-mobile-alt notice__icon"></i>
                     <span class="notice__text">Choisissez un restaurant</span>
                 </li>
                 <li class="notice__item">
                     <span class="notice__no">2</span>
-                    <i class="fa-solid fa-list-ul notice__icon"></i>
+                    <i class="fas fa-list-ul notice__icon"></i>
                     <span class="notice__text">Composez votre menu</span>
                 </li>
                 <li class="notice__item">
                     <span class="notice__no">3</span>
-                    <i class="fa-solid fa-store notice__icon"></i>
+                    <i class="fas fa-store notice__icon"></i>
                     <span class="notice__text">Dégustez au restaurant</span>
                 </li>
             </ul>
         </section>
+        <!-- restaurant cards section -->
         <section class="card">
             <h2 class="card__title">Restaurants</h2>
             <div class="card__list">
+                <!-- restaurant cards -->
                 <article class="card__resto card__new">
-                    <a href="menu1.html">
+                    <a href="public/pages/menu1.html">
                         <img class="card__img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                         <div class="card__text">
                             <h3 class="card__name">La palette du goût</h3>
@@ -73,12 +81,12 @@
                         </div>
                     </a>
                     <div class="heart">
-                        <i class="fa-light fa-heart heart-icon heart__base"></i>
-                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                        <i class="fal fa-heart heart-icon heart__base"></i>
+                        <i class="fas fa-heart heart-icon heart__hover"></i>
                     </div>
                 </article>
                 <article class="card__resto card__new">
-                    <a href="menu2.html">
+                    <a href="public/pages/menu2.html">
                         <img class="card__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                         <div class="card__text">
                             <h3 class="card__name">La note enchantée</h3>
@@ -86,12 +94,12 @@
                         </div>
                     </a>                            
                     <div class="heart">
-                        <i class="fa-light fa-heart heart-icon heart__base"></i>
-                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                        <i class="fal fa-heart heart-icon heart__base"></i>
+                        <i class="fas fa-heart heart-icon heart__hover"></i>
                     </div>
                 </article>
                 <article class="card__resto">
-                    <a href="menu3.html">
+                    <a href="public/pages/menu3.html">
                         <img class="card__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                         <div class="card__text">
                             <h3 class="card__name">À la française</h3>
@@ -99,12 +107,12 @@
                         </div>
                     </a>
                     <div class="heart">
-                        <i class="fa-light fa-heart heart-icon heart__base"></i>
-                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                        <i class="fal fa-heart heart-icon heart__base"></i>
+                        <i class="fas fa-heart heart-icon heart__hover"></i>
                     </div>
                 </article>
                 <article class="card__resto">
-                    <a href="menu4.html">
+                    <a href="public/pages/menu4.html">
                         <img class="card__img" src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <div class="card__text">
                             <h3 class="card__name">Le délice des sens</h3>
@@ -113,18 +121,19 @@
                         </div>
                     </a>
                     <div class="heart">
-                        <i class="fa-light fa-heart heart-icon heart__base"></i>
-                        <i class="fa-solid fa-heart heart-icon heart__hover"></i>
+                        <i class="fal fa-heart heart-icon heart__base"></i>
+                        <i class="fas fa-heart heart-icon heart__hover"></i>
                     </div>
                 </article>
             </div>
         </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
         <h2 class="footer__title">ohmyfood</h2>
         <ul class="footer__list">
-            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
-            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fa-solid fa-handshake-angle footer__icon"></i>Devenir partenaire</a></li>
+            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
+            <li class="footer__list-item footer__list-item-main"><a class="footer__link" href="#"><i class="fas fa-hands-helping footer__icon"></i>Devenir partenaire</a></li>
             <li class="footer__list-item"><a class="footer__link" href="#">Mentions légales</a></li>
             <li class="footer__list-item"><a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
