--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span><i class="fas fa-map-marker-alt"></i>Paris, Belleville</span>
             </div>
             <div class="location__text">
-                <h2 class="location__title">Réservez le menu qui vous convient</h2>
+                <h1 class="location__title">Réservez le menu qui vous convient</h1>
                 <span class="location__description">Découvrez des restaurants d'exeption, sélectionnés par nos soins.</span>
                 <button class="btn-cta location__btn">Explorer nos restaurants</button>
             </div>
@@ -69,62 +69,64 @@
         </section>
         <!-- restaurant cards section -->
         <section class="card">
-            <h2 class="card__title">Restaurants</h2>
-            <div class="card__list">
-                <!-- restaurant cards -->
-                <article class="card__resto card__new">
-                    <a href="public/pages/menu1.html">
-                        <img class="card__img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                        <div class="card__text">
-                            <h3 class="card__name">La palette du goût</h3>
-                            <span class="card__location">Ménilmontant</span>
+            <div class="card__box">
+                <h2 class="card__title">Restaurants</h2>
+                <div class="card__list">
+                    <!-- restaurant cards -->
+                    <article class="card__resto card__new">
+                        <a href="public/pages/menu1.html">
+                            <img class="card__img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                            <div class="card__text">
+                                <h3 class="card__name">La palette du goût</h3>
+                                <span class="card__location">Ménilmontant</span>
+                            </div>
+                        </a>
+                        <div class="heart">
+                            <i class="fal fa-heart heart-icon heart__base"></i>
+                            <i class="fas fa-heart heart-icon heart__hover"></i>
                         </div>
-                    </a>
-                    <div class="heart">
-                        <i class="fal fa-heart heart-icon heart__base"></i>
-                        <i class="fas fa-heart heart-icon heart__hover"></i>
-                    </div>
-                </article>
-                <article class="card__resto card__new">
-                    <a href="public/pages/menu2.html">
-                        <img class="card__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                        <div class="card__text">
-                            <h3 class="card__name">La note enchantée</h3>
-                            <span class="card__location">Charonne</span>
+                    </article>
+                    <article class="card__resto card__new">
+                        <a href="public/pages/menu2.html">
+                            <img class="card__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                            <div class="card__text">
+                                <h3 class="card__name">La note enchantée</h3>
+                                <span class="card__location">Charonne</span>
+                            </div>
+                        </a>                            
+                        <div class="heart">
+                            <i class="fal fa-heart heart-icon heart__base"></i>
+                            <i class="fas fa-heart heart-icon heart__hover"></i>
                         </div>
-                    </a>                            
-                    <div class="heart">
-                        <i class="fal fa-heart heart-icon heart__base"></i>
-                        <i class="fas fa-heart heart-icon heart__hover"></i>
-                    </div>
-                </article>
-                <article class="card__resto">
-                    <a href="public/pages/menu3.html">
-                        <img class="card__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                        <div class="card__text">
-                            <h3 class="card__name">À la française</h3>
-                            <span class="card__location">Cité Rouge</span>
+                    </article>
+                    <article class="card__resto">
+                        <a href="public/pages/menu3.html">
+                            <img class="card__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                            <div class="card__text">
+                                <h3 class="card__name">À la française</h3>
+                                <span class="card__location">Cité Rouge</span>
+                            </div>
+                        </a>
+                        <div class="heart">
+                            <i class="fal fa-heart heart-icon heart__base"></i>
+                            <i class="fas fa-heart heart-icon heart__hover"></i>
                         </div>
-                    </a>
-                    <div class="heart">
-                        <i class="fal fa-heart heart-icon heart__base"></i>
-                        <i class="fas fa-heart heart-icon heart__hover"></i>
-                    </div>
-                </article>
-                <article class="card__resto">
-                    <a href="public/pages/menu4.html">
-                        <img class="card__img" src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                        <div class="card__text">
-                            <h3 class="card__name">Le délice des sens</h3>
-                            <span class="card__location">Folie-Méricourt</span>
-                            
+                    </article>
+                    <article class="card__resto">
+                        <a href="public/pages/menu4.html">
+                            <img class="card__img" src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                            <div class="card__text">
+                                <h3 class="card__name">Le délice des sens</h3>
+                                <span class="card__location">Folie-Méricourt</span>
+                                
+                            </div>
+                        </a>
+                        <div class="heart">
+                            <i class="fal fa-heart heart-icon heart__base"></i>
+                            <i class="fas fa-heart heart-icon heart__hover"></i>
                         </div>
-                    </a>
-                    <div class="heart">
-                        <i class="fal fa-heart heart-icon heart__base"></i>
-                        <i class="fas fa-heart heart-icon heart__hover"></i>
-                    </div>
-                </article>
+                    </article>
+                </div>
             </div>
         </section>
     </main>
