--- a/public/pages/menu4.html
+++ b/public/pages/menu4.html
@@ -10,16 +10,18 @@
 <body>
     <!-- header -->
     <header>
-            <!-- return button -->
-            <div class="return">
-                <a  href="../../index.html"><i class="fas fa-arrow-left"></i></a>
-            </div>
-            <!-- logo -->
-            <div class="logo">
-                <a class="logo__link" href="../../index.html">
-                    <img class="logo__img" src="../../public/img/logo/ohmyfood@2x.svg" alt="ohmyfood">
-                </a>
-            </div>
+            <nav>
+                <!-- return button -->
+                <div class="return">
+                    <a  href="../../index.html"><i class="fas fa-arrow-left"></i></a>
+                </div>
+                <!-- logo -->
+                <div class="logo">
+                    <a class="logo__link" href="../../index.html">
+                        <img class="logo__img" src="../../public/img/logo/ohmyfood@2x.svg" alt="ohmyfood">
+                    </a>
+                </div>
+            </nav>
     </header>
     <main>
         <!-- banner image -->
