correction after W3C validation test

--- a/public/pages/menu2.html
+++ b/public/pages/menu2.html
@@ -33,7 +33,7 @@
             <!-- restaurant name -->
             <div class="menu__title-bloc">
                 <h1 class="menu__title">La note enchantée</h1>
-                <div class="heart" href="#">
+                <div class="heart">
                     <i class="fal fa-heart heart-icon heart__base"></i>
                     <i class="fas fa-heart heart-icon heart__hover"></i>
                 </div>
