--- a/public/pages/menu4.html
+++ b/public/pages/menu4.html
@@ -33,7 +33,7 @@
             <!-- restaurant name -->
             <div class="menu__title-bloc">
                 <h1 class="menu__title">Le délice des sens</h1>
-                <div class="heart heart-bottom" href="#">
+                <div class="heart heart-bottom">
                     <i class="fal fa-heart heart-icon heart__base"></i>
                     <i class="fas fa-heart heart-icon heart__hover"></i>
                 </div>
