correction of loader bug on safari

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
     <link rel="icon" href="public/img/favicon.ico">
+    <!--import loader font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <!-- import css -->
     <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
@@ -12,14 +17,14 @@
     <div id="loader" class="loader">
         <div class="loader__container">
             <div class="loader__animation">
-                    <span>o</span>
-                    <span>h</span>
-                    <span>m</span>
-                    <span>y</span>
-                    <span>f</span>
-                    <span>o</span>
-                    <span>o</span>
-                    <span>d</span>
+                    <div class="loader__char">o</div>
+                    <div class="loader__char">h</div>
+                    <div class="loader__char">m</div>
+                    <div class="loader__char">y</div>
+                    <div class="loader__char">f</div>
+                    <div class="loader__char">o</div>
+                    <div class="loader__char">o</div>
+                    <div class="loader__char">d</div>
             </div>
         </div>
     </div>
